--- a/AzurePushNotification/AzurePushNotification.Plugin.Android/AzurePushNotification.Plugin.Android.csproj
+++ b/AzurePushNotification/AzurePushNotification.Plugin.Android/AzurePushNotification.Plugin.Android.csproj
@@ -9,14 +9,14 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AzurePushNotificationForXamarinForms.Plugin</RootNamespace>
-    <AssemblyName>AzurePushNotificationForXamarinForms.Plugin</AssemblyName>
+    <RootNamespace>AzurePushNotification.Plugin</RootNamespace>
+    <AssemblyName>AzurePushNotification.Plugin</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <DevInstrumentationEnabled>True</DevInstrumentationEnabled>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,7 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\AzurePushNotificationForXamarinForms.Plugin.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\AzurePushNotification.Plugin.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GCM.Client">
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AzurePushNotificationForXamarinForms.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
+    <Compile Include="..\AzurePushNotification.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
       <Link>CrossAzurePushNotificationForXamarinForms.cs</Link>
     </Compile>
     <Compile Include="AzurePushNotificationForXamarinFormsImplementation.cs" />
@@ -63,12 +63,6 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AzurePushNotificationForXamarinForms.Plugin.Abstractions\AzurePushNotificationForXamarinForms.Plugin.Abstractions.csproj">
-      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
-      <Name>AzurePushNotificationForXamarinForms.Plugin.Abstractions</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <XamarinComponentReference Include="azure-messaging">
       <Visible>False</Visible>
       <Version>1.1.5.6</Version>
@@ -77,6 +71,12 @@
       <Visible>False</Visible>
       <Version>1.0</Version>
     </XamarinComponentReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AzurePushNotification.Plugin.Abstractions\AzurePushNotification.Plugin.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>AzurePushNotification.Plugin.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
