--- a/AzurePushNotification/AzurePushNotification.Plugin.WindowsPhone8/AzurePushNotifications.Plugin.WindowsPhone8.csproj
+++ b/AzurePushNotification/AzurePushNotification.Plugin.WindowsPhone8/AzurePushNotifications.Plugin.WindowsPhone8.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AzurePushNotificationForXamarinForms.Plugin</RootNamespace>
-    <AssemblyName>AzurePushNotificationForXamarinForms.Plugin</AssemblyName>
+    <AssemblyName>AzurePushNotification.Plugin</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -39,7 +39,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>Bin\Release\AzurePushNotificationForXamarinForms.Plugin.XML</DocumentationFile>
+    <DocumentationFile>Bin\Release\AzurePushNotification.Plugin.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -84,17 +84,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\AzurePushNotificationForXamarinForms.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
+    <Compile Include="..\AzurePushNotification.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
       <Link>CrossAzurePushNotificationForXamarinForms.cs</Link>
     </Compile>
     <Compile Include="AzurePushNotificationForXamarinFormsImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AzurePushNotificationForXamarinForms.Plugin.Abstractions\AzurePushNotificationForXamarinForms.Plugin.Abstractions.csproj">
-      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
-      <Name>AzurePushNotificationForXamarinForms.Plugin.Abstractions</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAzure.Messaging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -104,6 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AzurePushNotification.Plugin.Abstractions\AzurePushNotification.Plugin.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>AzurePushNotification.Plugin.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
