--- a/AzurePushNotification/AzurePushNotification.Plugin.WindowsPhone81/AzurePushNotification.Plugin.WindowsPhone81.csproj
+++ b/AzurePushNotification/AzurePushNotification.Plugin.WindowsPhone81/AzurePushNotification.Plugin.WindowsPhone81.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AzurePushNotificationForXamarinForms.Plugin</RootNamespace>
-    <AssemblyName>AzurePushNotificationForXamarinForms.Plugin</AssemblyName>
+    <AssemblyName>AzurePushNotification.Plugin</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformVersion>8.1</TargetPlatformVersion>
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
@@ -33,7 +33,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_PHONE_APP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\AzurePushNotificationForXamarinForms.Plugin.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\AzurePushNotification.Plugin.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -80,14 +80,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <ProjectReference Include="..\AzurePushNotificationForXamarinForms.Plugin.Abstractions\AzurePushNotificationForXamarinForms.Plugin.Abstractions.csproj">
-      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
-      <Name>AzurePushNotificationForXamarinForms.Plugin.Abstractions</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\AzurePushNotificationForXamarinForms.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
+    <Compile Include="..\AzurePushNotification.Plugin\CrossAzurePushNotificationForXamarinForms.cs">
       <Link>CrossAzurePushNotificationForXamarinForms.cs</Link>
     </Compile>
     <Compile Include="AzurePushNotificationForXamarinFormsImplementation.cs" />
@@ -101,6 +94,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AzurePushNotification.Plugin.Abstractions\AzurePushNotification.Plugin.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>AzurePushNotification.Plugin.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
