--- a/AzurePushNotification/AzurePushNotification.Plugin.Abstractions/AzurePushNotification.Plugin.Abstractions.csproj
+++ b/AzurePushNotification/AzurePushNotification.Plugin.Abstractions/AzurePushNotification.Plugin.Abstractions.csproj
@@ -38,9 +38,10 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PushNotificationCredentials.cs" />
-    <Compile Include="IAzurePushNotificationForXamarinForms.cs" />
+    <Compile Include="IAzurePushNotification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PushNotificationCredentials.cs" />
+    <Compile Include="PushNotificationMessages.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
